# login-success.yml
appId: "com.example.gambleapp"
---
- launchApp

- tapOn:
    text: "gambleApp"
    optional: true

# 1. On the home screen, tap the "Login" button
- tapOn: ", Login"

# 2. Fill out the login form
- tapOn: "Username"
- inputText: "test"

- tapOn: "Password"
- inputText: "test" # Use the password from your first test

# 3. Tap the "Login" button on the form
- tapOn:
    text: "LOGIN"
    index: 1

- tapOn:
    text: "OK"

- tapOn:
    text: "Logout"

- tapOn:
    text: "LOGOUT"
    index: 1

- tapOn:
    text: "SIGN IN WITH GOOGLE"

- tapOn:
    text: "Anthony Constante"

- tapOn:
    text: "Continue"

- tapOn:
    text: "OK"

- tapOn:
    text: "Teams"

# 4. Assert you are on the home screen
- assertVisible: "Teams"